# vega-agent

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEBUGGING.md  FIX_0601.md  LICENSE  README.md  pytest.ini  requirements.txt
.openswarm/: repo-snapshot.json  repo.graphql
.tmp-test-vega-data/: llm_providers.json  vega.db
benchmark_reports/: memory_search
data/: bench_tasks.json  llm_providers.json  overthinking_scenarios.json  tool_groups.json  user_profile.json
desktop/: Cargo.toml  DESIGN.md  Info.plist  entitlements.plist  tauri.client.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.windows.conf.json
desktop/capabilities/: default.json  desktop.json
desktop/icons/: icon.icns
desktop/resources/: com.unohee.vega-backend.plist
desktop/src/: client_config.rs  lib.rs  main.rs
desktop/updater/: README.md  latest.json.template
desktop/windows/: hooks.nsh
docs/: DESIGN_execution_safety_model.md  I18N_ROADMAP.md  ONBOARDING.md  VEGA_OVERVIEW.md  bench_design.md  bench_external_exclusions.md  bench_results.md  int1893_ikea_scenario.md  int1893_overthinking_roadmap.md  memory_curation_design.md  memory_search_conventions.md  plan_docker_free_local_exec.md
pipeline/: browser_history_connector.py  commands.py  compaction.py  contact_store.py  context_collect.py  cron_jobs.py  data_paths.py  discord_bridge.py  google_freshness.py  graph_cooccurrence.py  heartbeat.py  hybrid_search.py  imessage_importer.py  injection_guard.py  keychain.py  llm_gateway.py  local_file_crawl.py  mcp_client.py  memory_store.py  model_catalog.py  overthinking_telemetry.py  path_guard.py  permission.py  project_state.py  run_log.py  sandbox.py  self_improve.py  session_store.py  settings_store.py  spawn.py  ssl_ctx.py  streaming.py  stt_gateway.py  sync_health.py  tier_router.py  token_count.py  tool_registry.py  tool_telemetry.py  tools.py  tools_airtable.py  (+14 more)
reports/: gate_report.md
sandbox/: Dockerfile  docker-compose.yml
scripts/: bench_agent.py  bench_external.py  bench_fts5_vs_bge_m3.py  bench_harness_triage.py  bench_lib.py  bench_memory_retrieval.py  bench_memory_search.py  bench_models.py  bench_output.txt  bench_output_clean.json  build_dmg.sh  (+28 more)
(+226 files in other folders)
