[package]
name = "vega-desktop"
version = "0.1.31"
description = "VEGA 데스크탑 셸 — 클라이언트 또는 데몬 포함 올인원 빌드"
authors = ["unohee"]
edition = "2021"
rust-version = "1.77"
default-run = "vega-desktop"

# --features client  → 백엔드 없이 외부 서버 URL에 붙는 얇은 클라이언트
# --features daemon  → sidecar 백엔드 포함 올인원 (기본)
[features]
default = ["daemon"]
client = []
daemon = []

[lib]
name = "vega_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
# 클립보드 — 원격 origin(localhost:8100) WebView에서 navigator.clipboard가 차단되는 문제 폴백 (INT-1472)
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[target."cfg(target_os = \"macos\")".dependencies]
# launchctl 도메인(gui/<uid>) 계산용 getuid — macOS 전용
libc = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
# 자동 업데이트 (CF R2 등 정적 호스팅에서 받아 버전업). iOS/Android는 스토어 정책상 제외.
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
